All website code

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
     />
     <style>
       :root {
-        --primary: 244 72% 59%;
+        --primary: #ff69b4;
         --secondary: 4 100% 73%;
         --accent: 168 100% 36%;
 
