--- a/index.html
+++ b/index.html
@@ -1,29 +1,62 @@
-<!DOCTYPE HTML>
-
-<html lang=”en”>
-
+<!doctype html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Emma Duffy | Software and Data Engineering</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;900&family=Poppins:wght@300;400;500;600&family=Montserrat:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <meta
+      name="description"
+      content="Emma Duffy - Software and Data Engineering. View my portfolio, projects, resume and get in touch."
+    />
+    <style>
+      :root {
+        --primary: #ff69b4;
+        --secondary: 4 100% 73%;
+        --accent: 168 100% 36%;
 
-    <meta charset=”UTF-8″>
+        --font-display: "Playfair Display", serif;
+        --font-body: "Poppins", sans-serif;
+        --font-accent: "Montserrat", sans-serif;
+      }
 
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
+      body {
+        font-family: var(--font-body);
+      }
 
-    <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: var(--font-display);
+      }
 
-    <title>My Website [Name of the website]</title>
+      .font-display {
+        font-family: var(--font-display);
+      }
 
+      .font-body {
+        font-family: var(--font-body);
+      }
+
+      .font-accent {
+        font-family: var(--font-accent);
+      }
+    </style>
   </head>
-
   <body>
-
-    <main>
-
-        <h1>Welcome to My Website Emma</h1>  
-
-        <p>This is my new website hosted on GitHub Pages!</p>
-
-    </main>
-
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
-
 </html>
